# RAG-Task-1

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
agentic_rag/: __init__.py
agentic_rag/agents/: document.py  generation.py  image.py  retrieval.py  verification.py
agentic_rag/core/: base_agent.py  orchestrator.py  pipeline.py  types.py
agentic_rag/utils/: __init__.py  model_cache.py
examples/: basic_usage.py  multimodal_example.py
